--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "event": "nodemon event.js",
+    "grpg": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@grpc/grpc-js": "^1.9.7",
     "axios": "^1.4.0",
+    "big-integer": "^1.6.51",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "google-protobuf": "^3.21.2"
   }
 }
