--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
-    "google-protobuf": "^3.21.2"
+    "google-protobuf": "^3.21.2",
+    "qrcode": "^1.5.3"
   }
 }
