--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "date-fns": "^2.30.0",
     "express": "^4.18.2",
     "google-protobuf": "^3.21.2",
+    "jsqr": "^1.4.0",
+    "multer": "^1.4.5-lts.1",
+    "qr-image": "^3.2.0",
     "qrcode": "^1.5.3"
   }
 }
